--- a/.github/workflows/laravel-ci.yml
+++ b/.github/workflows/laravel-ci.yml
@@ -29,12 +29,9 @@ jobs:
         uses: actions/checkout@v4
 
       # Step 2: Prepare .env file
-      - name: Prepare env
-        run: cp .env.example .env
-
-      # Step 3: Configure database in .env
-      - name: Configure database
+      - name: Prepare .env
         run: |
+          cp .env.example .env
           sed -i 's/DB_CONNECTION=.*/DB_CONNECTION=mysql/' .env
           sed -i 's/DB_HOST=.*/DB_HOST=mysql/' .env
           sed -i 's/DB_PORT=.*/DB_PORT=3306/' .env
@@ -42,14 +39,18 @@ jobs:
           sed -i 's/DB_USERNAME=.*/DB_USERNAME=root/' .env
           sed -i 's/DB_PASSWORD=.*/DB_PASSWORD=root/' .env
 
-      # Step 4: Install dependencies
-      - name: Install PHP dependencies
+      # Step 3: Clear Laravel config cache (important!)
+      - name: Clear config cache
+        run: php artisan config:clear
+
+      # Step 4: Install PHP dependencies
+      - name: Install dependencies
         run: composer install --no-interaction --prefer-dist --optimize-autoloader
 
       # Step 5: Run migrations
       - name: Run migrations
         run: php artisan migrate --force
 
-      # Step 6: Run tests
-      - name: Run Laravel tests
+      # Step 6: Run Laravel tests
+      - name: Run tests
         run: php artisan test
