--- a/.github/workflows/laravel-ci.yml
+++ b/.github/workflows/laravel-ci.yml
@@ -9,6 +9,14 @@ jobs:
   test:
     runs-on: ubuntu-latest
 
+    env:
+      DB_CONNECTION: mysql
+      DB_HOST: 127.0.0.1
+      DB_PORT: 3306
+      DB_DATABASE: laravel
+      DB_USERNAME: root
+      DB_PASSWORD: root
+
     services:
       mysql:
         image: mysql:8.0
@@ -18,42 +26,42 @@ jobs:
         ports:
           - 3306:3306
         options: >-
-          --health-cmd="mysqladmin ping -h mysql -uroot -proot"
+          --health-cmd="mysqladmin ping -h localhost -u root -proot"
           --health-interval=10s
           --health-timeout=5s
-          --health-retries=3
+          --health-retries=5
 
     steps:
-      # Step 1: Checkout code
       - name: Checkout code
         uses: actions/checkout@v4
 
-      # Step 2: Prepare .env file
-      - name: Prepare .env
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: '8.2'
+          extensions: mbstring, xml, ctype, iconv, intl, pdo_mysql
+
+      - name: Copy .env
         run: cp .env.example .env
 
-      # Step 3: Install PHP dependencies
       - name: Install dependencies
-        run: composer install --no-interaction --prefer-dist --optimize-autoloader
+        run: composer install --no-interaction --prefer-dist
 
-      # Step 4: Configure database in .env
-      - name: Configure database
+      - name: Generate key and clear cache
         run: |
-          sed -i 's/DB_CONNECTION=.*/DB_CONNECTION=mysql/' .env
-          sed -i 's/DB_HOST=.*/DB_HOST=mysql/' .env
-          sed -i 's/DB_PORT=.*/DB_PORT=3306/' .env
-          sed -i 's/DB_DATABASE=.*/DB_DATABASE=laravel/' .env
-          sed -i 's/DB_USERNAME=.*/DB_USERNAME=root/' .env
-          sed -i 's/DB_PASSWORD=.*/DB_PASSWORD=root/' .env
+          php artisan key:generate
+          php artisan config:clear
+          php artisan cache:clear
 
-      # Step 5: Clear config cache (ensure Laravel reads .env)
-      - name: Clear config cache
-        run: php artisan config:clear
+      - name: Wait for MySQL
+        run: |
+          while ! mysqladmin ping -h"127.0.0.1" -u"root" -p"root" --silent; do
+            echo "Waiting for MySQL..."
+            sleep 2
+          done
 
-      # Step 6: Run migrations
       - name: Run migrations
         run: php artisan migrate --force
 
-      # Step 7: Run Laravel tests
-      - name: Run Laravel tests
+      - name: Run tests
         run: php artisan test
