--- a/.github/workflows/laravel-ci.yml
+++ b/.github/workflows/laravel-ci.yml
@@ -9,14 +9,6 @@ jobs:
   test:
     runs-on: ubuntu-latest
 
-    env:
-      DB_CONNECTION: mysql
-      DB_HOST: 127.0.0.1
-      DB_PORT: 3306
-      DB_DATABASE: laravel
-      DB_USERNAME: root
-      DB_PASSWORD: root
-
     services:
       mysql:
         image: mysql:8.0
@@ -26,7 +18,7 @@ jobs:
         ports:
           - 3306:3306
         options: >-
-          --health-cmd="mysqladmin ping -h localhost -u root -proot"
+          --health-cmd="mysqladmin ping"
           --health-interval=10s
           --health-timeout=5s
           --health-retries=5
@@ -41,27 +33,32 @@ jobs:
           php-version: '8.2'
           extensions: mbstring, xml, ctype, iconv, intl, pdo_mysql
 
-      - name: Copy .env
-        run: cp .env.example .env
-
       - name: Install dependencies
         run: composer install --no-interaction --prefer-dist
 
-      - name: Generate key and clear cache
-        run: |
-          php artisan key:generate
-          php artisan config:clear
-          php artisan cache:clear
-
       - name: Wait for MySQL
+        run: sleep 10
+
+      # Run everything in one command with environment variables
+      - name: Setup and test Laravel
+        env:
+          DB_CONNECTION: mysql
+          DB_HOST: 127.0.0.1
+          DB_PORT: 3306
+          DB_DATABASE: laravel
+          DB_USERNAME: root
+          DB_PASSWORD: root
+          APP_ENV: testing
+          APP_KEY: base64:SomeRandomKeyHereReplaceWithRealOne
         run: |
-          while ! mysqladmin ping -h"127.0.0.1" -u"root" -p"root" --silent; do
-            echo "Waiting for MySQL..."
-            sleep 2
-          done
+          # Test database connection
+          mysql -h127.0.0.1 -uroot -proot -e "CREATE DATABASE IF NOT EXISTS laravel;"
 
-      - name: Run migrations
-        run: php artisan migrate --force
+          # Run migrations first
+          php artisan migrate --force
 
-      - name: Run tests
-        run: php artisan test
+          # Generate key if needed
+          php artisan key:generate --force
+
+          # Run tests
+          php artisan test
